--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,20 @@
 	    <version>3.12.10</version>
 	</dependency>
 
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.5.13</version>
+	</dependency>
+
+	<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+	</dependency>
+
+
+
   </dependencies>
 
   <build>
